# leafy-hollows

./: .gitignore  Makefile  README.md  Todo.txt  bugs.txt  build_checklist.txt  checklist.txt  github_test  graphics.py  ideas.txt  main.py  plan.txt  requirements.txt  shader.py  template.frag  template.vert  todo.txt  wave.frag
LeafyHollowsPython/: build.spec  main.py
LeafyHollowsRust/: Cargo.toml  build_release.command  rust_installation.txt
LeafyHollowsRust/resources/font/: font.json  font.txt  setup.py
LeafyHollowsRust/resources/shader/: fragment.glsl  vertex.glsl
LeafyHollowsRust/ressources/shader/: fragment.glsl  vertex.glsl
LeafyHollowsRust/src/: constants.rs  file.rs  main.rs  window.rs
LeafyHollowsRust/src/graphics/: buffer.rs  clock.rs  draw.rs  font.rs  image.rs  input.rs  mod.rs  shader.rs  window.rs
LeafyHollowsRust/src/utility/: constants.rs  file.rs  macros.rs  mod.rs
experimental/: 2dsounds.py  menu.py
experimental/android_test/: calculatorclass.kv  main.py
experimental/c_types/: example.c  main.py
experimental/cfunctions/: lib.py
experimental/ctypes/: example.c  main.py
experimental/geometry/: Cargo.toml
experimental/noise/: test2.py
main/: build.txt  builddmg.sh  install_requirements.py  macos.spec  main.py  main.spec  pyinstaller_build.txt  requirements.txt  structure_editor.py  test.py  windows.spec
main_python/: install_requirements.py  main.py
original_presentation/: main.py  requirements.txt  structure_editor.py
prototype/: build.txt  main.py
shaders/: shader.py  wave.frag
src/: main.rs
test/: test.py
(+765 files in other folders)
