# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "main"
version = "0.1.0"
edition = "2021"
description = "Adventure Game"

[package.metadata.bundle]
name = "LeafyHollows"
identifier = "io.github.oskarmeyenburg.leafyhollows"
osx_frameworks = ["SDL2"]
icon = ["ressources/icon/icon.png"]

[dependencies]
anyhow = "1.0.77"
directories = "5.0.1"
gl = "0.14.0"
sdl2 = { version = "0.36.0", features = ["bundled"] }
